--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,7 +1,7 @@
 .banner {
   color: white;
   object-fit: contain;
-  height: 448px;
+  height: 600px;
   margin-bottom: 20px;
 }
 
@@ -47,11 +47,11 @@
 }
 
 .banner_fadeBottom {
-  height: 7.4rem;
+  height: 16.3rem;
   background-image: linear-gradient(
     180deg,
     transparent,
     rgba(37, 37, 37, 0.61),
-    #111
+    black
   );
 }
